# Talking-Head-Orchestrator-API

./: .dockerignore  .env.example  .gitignore  GEMINI.md  RUN_SERVICES.md  s7 log.txt
docs/architecture/: CENTRALIZED_LOGGING_PHASE2_PLAN.md  DEPENDENCY_LAYOUT.md  LOGGING_STACK_COMMANDS.md  LOGGING_STACK_REPRO_RUNBOOK.md  PIPELINE_OVERVIEW.md  SECRETS.md  SHARED_UTILS_PHASE2_PLAN.md
infra/docker-compose/: README.md  compose.yaml  docker-compose.yml
infra/observability/: README.md  bootstrap-signoz.ps1  compose.yaml  docker-compose.yml
infra/vector/: README.md  vector.yaml
services/s1-ingest-nocodb/: Dockerfile  README.md  pyproject.toml
services/s1-ingest-nocodb/src/ingest_nocodb/: app.py  messaging.py  settings.py
services/s1-ingest-nocodb/tests/: test_webhook.py
services/s2-download-mp4/: Dockerfile  README.md  pyproject.toml
services/s2-tts-voice/: pyproject.toml  requirements.txt
services/s3-tts-voice/: Dockerfile  README.md  pyproject.toml
services/s4-broll-selector/: pyproject.toml
services/s4-inference-engine/: .dockerignore  Dockerfile  README.md  SOULX_FLASHHEAD_INTEGRATION.md  pyproject.toml
services/s4-inference-engine/src/inference_engine/: __init__.py  settings.py  soulx_runtime.py  worker.py
services/s5-broll-selector/: Dockerfile  README.md  pyproject.toml
services/s5-video-compositor/: pyproject.toml
services/s6-storage-uploader/: Dockerfile  pyproject.toml
services/s6-video-compositor/: Dockerfile  README.md  pyproject.toml
services/s7-nocodb-updater/: README.md  pyproject.toml
services/s7-storage-uploader/: Dockerfile  (+2 more)
(+21 files in other folders)
