[project]
name = "ingest-nocodb"
version = "0.1.0"
description = "Webhook ingest service for NocoDB records"
requires-python = ">=3.12"
dependencies = [
  "dramatiq[rabbitmq]>=2.0.1",
  "fastapi==0.126.0",
  "loguru>=0.7.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "uvicorn==0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
